# alto_duckdb_sandbox

./: .gitignore  README.md  alto.yaml  dbt_project.yml  profiles.yml  pyproject.toml
models/: asana__users.sql  asana__users__extract.py  carbon_intensity__json.py  schema.yml
